maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:22: error: identifier expected but integer literal found.
  xi = pos[0];
           ^ShortestPathMaze:22: error: ']' expected but ';' found.
  xi = pos[0];
             ^ShortestPathMaze:23: error: identifier expected but integer literal found.
  yi = pos[1];
           ^ShortestPathMaze:23: error: ']' expected but ';' found.
  yi = pos[1];
             ^